attached_assets/Pasted-error-OUT-DIR-env-var-is-not-set-do-you-have-a-build-sc_1769527283485.txt
error: OUT_DIR env var is not set, do you have a build script?
   --> src\main.rs:288:14
    |
288 |         .run(tauri::generate_context!())
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: this error originates in the macro `tauri::generate_context` (in Nightly builds, run with -Z macro-backtrace for more info)
warning: unused import: `Manager`
 --> src\main.rs:6:30
  |
6 | use tauri::{command, Window, Manager};
  |                              ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
warning: unused import: `SWP_NOSIZE`
 --> src\main.rs:8:128
  |
8 | ...dowTextW, IsWindowVisible, SetForegroundWindow, SetWindowPos, SWP_NOSIZE, SWP_NOMOVE, HWND_TOP, GetClassNameW};
  |                                                                  ^^^^^^^^^^
warning: unused imports: `DXGI_OUTDUPL_DESC`, `DXGI_OUTDUPL_FRAME_INFO`, `DXGI_OUTPUT_DESC`, `IDXGIAdapter`, `IDXGIOutput`, and `IDXGIResource`
  --> src\main.rs:12:71
   |
12 | ...Factory, IDXGIAdapter, IDXGIOutput, IDXGIOutput1, DXGI_OUTPUT_DESC, IDXGIResource, DXGI_OUTDUPL_DESC, DXGI_OUTDUPL_FRAME_INFO, IDXGIOu...
   |             ^^^^^^^^^^^^  ^^^^^^^^^^^                ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^
warning: unused imports: `D3D11_CPU_ACCESS_READ`, `D3D11_MAPPED_SUBRESOURCE`, `D3D11_MAP_READ`, `D3D11_TEXTURE2D_DESC`, `D3D11_USAGE_STAGING`, and `ID3D11Texture2D`
  --> src\main.rs:13:143
   |
13 | ...LAG, ID3D11Texture2D, D3D11_TEXTURE2D_DESC, D3D11_USAGE_STAGING, D3D11_CPU_ACCESS_READ, D3D11_MAPPED_SUBRESOURCE, D3D11_MAP_READ};
   |         ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^
error[E0599]: no method named `is_ok` found for struct `BOOL` in the current scope
   --> src\main.rs:114:30
    |
114 |     if IsWindowVisible(hwnd).is_ok() {
    |                              ^^^^^ method not found in `BOOL`
error[E0599]: no method named `is_ok` found for struct `BOOL` in the current scope
   --> src\main.rs:202:38
    |
202 |         if SetForegroundWindow(hwnd).is_ok() {
    |                                      ^^^^^ method not found in `BOOL`
For more information about this error, try `rustc --explain E0599`.
warning: `gto-poker-bot` (bin "gto-poker-bot") generated 4 warnings
error: could not compile `gto-poker-bot` (bin "gto-poker-bot") due to 3 previous errors; 4 warnings emitted
       Error failed to build app: failed to build app
Error: Command "tauri ["build"]" failed with exit code 1